# prism-terminal

./: .env.sample  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  config.yml  contributing.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  refactor.yml
.github/workflows/: ci.yml  protect_main.yml  ruff_format.yml  use-org-workflows.yml
docs/: dotenv_guide.md  gemini_api_dto.md
docs/architecture/: system_design.md
src/: __init__.py  config.py  main.py
src/components/: __init__.py  execution_engine.py  history_filter.py  input_router.py  output_processor.py  prompt_engine.py  session_memory.py
src/models/: __init__.py  core_models.py  session_memory_model.py
