[project]
name = "prism-terminal"
version = "0.1.0"
description = "Intelligent terminal with integrated AI chat and command execution capabilities."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
]
