[project]
name = "prism-terminal"
version = "0.1.0"
description = "An innovative terminal experience designed to boost developer productivity by integrating modern AI directly into the command-line workflow."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
]
